nipdf/src/ccitt/snapshots/nipdf__ccitt__tests__decode_group4.snap
---
source: nipdf/src/ccitt/tests.rs
expression: "decoder.decode(include_bytes!(\"./ccitt-1\")).unwrap()"
---
[
    0,
    59,
    0,
    0,
    39,
    0,
    0,
    36,
    128,
    14,
    73,
    64,
    17,
    73,
    32,
    20,
    178,
    32,
    60,
    182,
    80,
    117,
    254,
    136,
    23,
    255,
    140,
    23,
    95,
    20,
    28,
    7,
    226,
    56,
    3,
    196,
    112,
    49,
    130,
    248,
    237,
    252,
    178,
    187,
    194,
    187,
    111,
    132,
    49,
    191,
    194,
    24,
    234,
    60,
    14,
    62,
    0,
    7,
    252,
    0,
    3,
    248,
    0,
    30,
    24,
    0,
    31,
    248,
    0,
]
