nipdf/src/ccitt/snapshots/nipdf__ccitt__tests__group3_2d.snap
---
source: nipdf/src/ccitt/tests.rs
expression: "decoder.decode(include_bytes!(\"group3-2d\")).unwrap()"
---
[
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    63,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    159,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    207,
    255,
    248,
    195,
    252,
    31,
    255,
    241,
    255,
    255,
    231,
    255,
    252,
    97,
    252,
    31,
    255,
    240,
    255,
    255,
    243,
    255,
    252,
    112,
    252,
    31,
    255,
    240,
    127,
    255,
    249,
    255,
    254,
    56,
    124,
    31,
    255,
    240,
    63,
    255,
    252,
    255,
    255,
    28,
    60,
    31,
    255,
    224,
    31,
    255,
    254,
    127,
    255,
    142,
    28,
    31,
    255,
    224,
    15,
    255,
    255,
    63,
    255,
    143,
    12,
    31,
    255,
    240,
    135,
    255,
    255,
    159,
    255,
    199,
    132,
    31,
    255,
    248,
    195,
    255,
    255,
    207,
    255,
    227,
    192,
    7,
    255,
    253,
    225,
    255,
    255,
    231,
    255,
    241,
    224,
    3,
    255,
    255,
    240,
    255,
    255,
    243,
    255,
    241,
    240,
    0,
    255,
    255,
    248,
    127,
    255,
    249,
    255,
    248,
    248,
    24,
    63,
    255,
    252,
    63,
    255,
    252,
    255,
    252,
    124,
    30,
    31,
    255,
    254,
    31,
    255,
    254,
    127,
    254,
    62,
    31,
    7,
    255,
    255,
    15,
    255,
    255,
    63,
    254,
    63,
    15,
    195,
    255,
    255,
    135,
    255,
    255,
    159,
    255,
    31,
    135,
    224,
    255,
    255,
    195,
    255,
    255,
    207,
    255,
    143,
    195,
    248,
    127,
    255,
    225,
    255,
    255,
    231,
    255,
    199,
    225,
    254,
    31,
    255,
    240,
    255,
    255,
    243,
    255,
    199,
    240,
    255,
    7,
    255,
    248,
    127,
    255,
    249,
    255,
    227,
    248,
    127,
    195,
    255,
    252,
    63,
    255,
    252,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    254,
    127,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
