nipdf/src/ccitt/snapshots/nipdf__ccitt__tests__group4_false_end_of_block.snap
---
source: nipdf/src/ccitt/tests.rs
expression: "decoder.decode(include_bytes!(\"ccitt-false-end-of-block\")).unwrap()"
---
[
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    63,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    159,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    207,
    255,
    140,
    63,
    193,
    255,
    255,
    255,
    143,
    255,
    231,
    255,
    198,
    31,
    193,
    255,
    255,
    255,
    135,
    255,
    243,
    255,
    199,
    15,
    193,
    255,
    255,
    255,
    131,
    255,
    249,
    255,
    227,
    135,
    193,
    255,
    255,
    255,
    129,
    255,
    252,
    255,
    241,
    195,
    193,
    255,
    255,
    255,
    0,
    255,
    254,
    127,
    248,
    225,
    193,
    255,
    255,
    255,
    0,
    127,
    255,
    63,
    248,
    240,
    193,
    255,
    255,
    255,
    132,
    63,
    255,
    159,
    252,
    120,
    65,
    255,
    255,
    255,
    198,
    31,
    255,
    207,
    254,
    60,
    0,
    127,
    255,
    255,
    239,
    15,
    255,
    231,
    255,
    30,
    0,
    63,
    255,
    255,
    255,
    135,
    255,
    243,
    255,
    31,
    0,
    15,
    255,
    255,
    255,
    195,
    255,
    249,
    255,
    143,
    129,
    131,
    255,
    240,
    15,
    225,
    255,
    252,
    255,
    199,
    193,
    225,
    255,
    248,
    7,
    240,
    255,
    254,
    127,
    227,
    225,
    240,
    127,
    252,
    3,
    248,
    127,
    255,
    63,
    227,
    240,
    252,
    63,
    254,
    1,
    252,
    63,
    255,
    159,
    241,
    248,
    126,
    15,
    255,
    255,
    254,
    31,
    255,
    207,
    248,
    252,
    63,
    135,
    255,
    255,
    255,
    15,
    255,
    231,
    252,
    126,
    31,
    225,
    255,
    255,
    255,
    135,
    255,
    243,
    252,
    127,
    15,
    240,
    127,
    255,
    255,
    195,
    255,
    249,
    254,
    63,
    135,
    252,
    63,
    255,
    255,
    225,
    255,
    252,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    254,
    127,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
