nipdf/src/ccitt/snapshots/nipdf__ccitt__tests__group4_inverse_black_white.snap
---
source: nipdf/src/ccitt/tests.rs
expression: "decoder.decode(include_bytes!(\"./ccitt-1\")).unwrap()"
---
[
    255,
    196,
    255,
    255,
    216,
    255,
    255,
    219,
    127,
    241,
    182,
    191,
    238,
    182,
    223,
    235,
    77,
    223,
    195,
    73,
    175,
    138,
    1,
    119,
    232,
    0,
    115,
    232,
    160,
    235,
    227,
    248,
    29,
    199,
    252,
    59,
    143,
    206,
    125,
    7,
    18,
    3,
    77,
    68,
    61,
    68,
    144,
    123,
    206,
    64,
    61,
    231,
    21,
    195,
    241,
    193,
    255,
    248,
    3,
    255,
    252,
    7,
    255,
    225,
    231,
    255,
    224,
    7,
    255,
]
